Goofy esolangs deserve frag'n
Still lacking a verb for enabling "fraglets" in a container. Maybe I'm
just a fraggler out here fragleting into madness.

--- a/lolcode/files/hello-world.lang
+++ b/lolcode/files/hello-world.lang
@@ -4,7 +4,6 @@ HAI 1.2
 BTW This has a little more going on (like variable assignment) because this ...
 BTW is hilarious.
 
-I HAS A PHRASE ITZ "Hello World!"
-VISIBLE PHRASE
+VISIBLE "Hello World!"
 
 KTHXBYE
